# robust_cpp

./: .gitignore  CMakeLists.txt  README.md  clang_tidy_setup.txt  get_clp.sh  get_deps.sh  input_spec.txt  input_spec_v2.txt  run_all_lp.sh  trial_write.py
examples/: coins.lp  coins.mps  coins_robust_reformulation.lp
instance_gen/: Experiment_Log.json  Experiment_Log_sp500_2017_10_13_03_51AM.json  FF3factor.csv  PortOpt_n10_m4_inst0.mps  PortOpt_n10_m4_inst_0.json  PortOpt_n10_m4_inst_0.mps  PortOpt_n10_m4_inst_1.mps  PortOpt_n10_m4_inst_2.mps  PortOpt_n10_m4_inst_3.mps  PortOpt_n10_m4_inst_4.json  PortOpt_n10_m4_inst_4.mps  allGen.py  permno_full.npy  robustLP_gen.py  robustPortfolio_gen.py  robustQP_constructor.py  robustQP_gen.py  robustSVM_gen.py  robustSVM_n10_m30_inst_0.mps  robustSVM_n10_m30_inst_2.json  robustSVM_n10_m30_inst_2.mps  sp500.py  test.json  test2.json
instance_gen/real_portfolio/: sp500.py
instances/: 25fv47_robust.json  80bau3b_robust.json  Manual_2.json  Manual_2.mps  PortOpt_Manual.json  PortOpt_Manual.mps  PortOpt_Manual_2.json  PortOpt_Manual_2.lp  PortOpt_n10_m4_inst_0.json  PortOpt_n10_m4_inst_0.mps  PortOpt_n10_m4_inst_1.json  PortOpt_n10_m4_inst_1.mps  PortOpt_n10_m4_inst_2.json  PortOpt_n10_m4_inst_2.mps  PortOpt_n10_m4_inst_3.json  PortOpt_n10_m4_inst_3.mps  PortOpt_n10_m4_inst_4.json  PortOpt_n10_m4_inst_4.mps  PortOpt_n10_m4_inst_6.json  PortOpt_n10_m4_inst_6.mps  PortOpt_n20_m8_inst_0.json  PortOpt_n20_m8_inst_0.mps  PortOpt_n20_m8_inst_1.json  PortOpt_n20_m8_inst_1.mps  PortOpt_n20_m8_inst_2.json  PortOpt_n20_m8_inst_2.mps  PortOpt_n20_m8_inst_3.json  PortOpt_n20_m8_inst_3.mps  PortOpt_n20_m8_inst_4.json  PortOpt_n20_m8_inst_4.mps  adlittle_robust.json  afiro_robust.json  agg2_robust.json  agg3_robust.json  agg_robust.json  instQP_n10_m2_0.csv  instQP_n10_m2_0.json  instQP_n10_m2_0.mps  instQP_n10_m2_1.csv  instQP_n10_m2_1.mps  (+42 more)
instances/old/: instQP_n10_m2_0.mps  instQP_n10_m2_1.json  instQP_n10_m2_2.json  instQP_n10_m2_3.json  instQP_n10_m2_4.json  instQP_n10_m2_4.mps  instQP_n20_m4_0.json  instQP_n20_m4_0.mps  instQP_n20_m4_2.json  instQP_n20_m4_4.json  instQP_n20_m4_4.mps
mathdoc/: Def.tex  RobustQP.aux  RobustQP.out  RobustQP.pdfsync  RobustQP.tex
src/: basic_types.h  logging.cpp  logging.h  main.cpp
src/domain/: domain.h  euclidean_ball.cpp  euclidean_ball.h  euclidean_ball_l2_prox.cpp  euclidean_ball_l2_prox.h  prox.h  simplex.cpp  simplex.h  simplex_entropy_prox.cpp  simplex_entropy_prox.h
src/model/: euclidean_ball_uncertainty_constraint.cpp  euclidean_ball_uncertainty_constraint.h  euclidean_ball_uncertainty_set.cpp  euclidean_ball_uncertainty_set.h  linear_uncertainty_constraint.cpp  linear_uncertainty_constraint.h  nominal_program.cpp  nominal_program.h  nominal_program_dense.cpp  nominal_program_dense.h  quadratic_uncertainty_constraint.cpp  quadratic_uncertainty_constraint.h  robust_file_based_program.cpp  robust_file_based_program.h  robust_linear_program.cpp  robust_linear_program.h  robust_program.h  robust_program_dense.h  robust_reader.cpp  robust_reader.h  second_order_cone_program.h  uncertainty_constraint.h  uncertainty_set.h
src/online_convex_optimization/: follow_the_perturbed_leader.cpp  follow_the_perturbed_leader.h  online_adam.cpp  online_adam.h  online_dual_averaging.cpp  online_dual_averaging.h  online_gradient_method.h  online_mirror_descent.cpp  online_mirror_descent.h
src/solver/: nominal_gurobi.cpp  nominal_gurobi.h  nominal_solver.h  pessimization_solver.cpp  pessimization_solver.h  resolve_with_regret_minimizers.cpp  resolve_with_regret_minimizers.h  robust_solver.h  trust_region.cpp  trust_region.h
test/: euclidean_ball_l2_prox_test.cpp  euclidean_ball_test.cpp  gtest.cpp  nominal_gurobi_test.cpp  online_mirror_descent_test.cpp  pessimization_solver_test.cpp  quadratic_uncertainty_constraint_test.cpp  resolve_with_regret_minimizers_test.cpp  robust_file_based_program_test.cpp  robust_linear_program_test.cpp  robust_reader_test.cpp  simplex_entropy_prox_test.cpp  simplex_test.cpp  test_simplex.cpp  test_simplex_entropy_prox.cpp  trust_region_test.cpp
vms/: Vagrantfile
